force-app/main/default/objects/Resource_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_By_Resource_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred By Resource Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Resource Preferences</relationshipLabel>
        <relationshipName>Resource_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Matched__c</columns>
        <columns>Order__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resource__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Matched_Preferences</fullName>
        <columns>NAME</columns>
        <columns>Matched__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Resource__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Matched__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Matched Preferences</label>
    </listViews>
    <listViews>
        <fullName>My_Matches</fullName>
        <columns>Resource__c</columns>
        <columns>Matched__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Matched__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Matches</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>